# ConnectionsBench

./: LICENSE  README.md  pyproject.toml
.github/workflows/: daily-fetch.yml
data/: connections.json
scripts/: fetch_puzzles.py
src/connectionsbench/: __init__.py  loader.py  models.py  runner.py  scorer.py
tests/: test_fetch_puzzles.py  test_loader.py  test_models.py  test_runner.py  test_scorer.py
