[project]
name = "connectionsbench"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "roman-collinge", email = "romancollinge@outlook.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
connectionsbench = "connectionsbench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "S"]
lint.ignore = [
    # empty
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]
